# rua

./: .gitignore  .ignore  Cargo.toml  README  README.md  output.diff
.cargo/: config.toml
data/: b3000.profiling.out.txt  b3000.profiling.txt
doc/: changelog.typ  manual.typ  reference.typ
docs/: CNAME
scripts/: 1to2.sh  last-rules.mk.bak  platform_table  rules.mk
src/: app.rs  config.rs  main.rs  utils.rs
src/cli/: clean.rs  compdb.rs  mkinfo.rs  mod.rs  perfan.rs  review.rs  self_update.rs  shinit.rs  showcc.rs  silist.rs  update.rs
src/core/: clean.rs  compdb.rs  mkinfo.rs  mod.rs  perfan.rs  review.rs  silist.rs  update.rs
src/libplatform/: hs_platform.c
src/submods/: clean.rs  compdb.rs  gencc.rs  getcc.rs  initsh.rs  mkinfo.rs  mod.rs  perfan.rs  profile.rs  review.rs  shinit.rs  showcc.rs  silist.rs
