[package]
name = "rua"
version = "1.4.2"
edition = "2024"
authors = ["bzhao"]
description = "A toolbox for developers of StoneOS and its derivatives"
keywords = ["StoneOS"]
categories = ["command-line-utilities", "terminal", "cli"]
rust-version = "1.89.0"
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.24.0"
anstyle = "1.0.8"
anyhow = "1.0"
bitflags = "2.6.0"
chrono = "0.4.39"
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = "4.5.40"
config = { version = "0.15.11", features = ["preserve_order", "indexmap"] }
console = "0.15.10"
csv = "1.3.0"
home = "0.5.9"
indexmap = { version = "2.7.0", features = ["serde"] }
indicatif = "0.17.9"
libc = "0.2.0"
regex = "1.10.0"
reqwest = { version = "0.12.0", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
rustix = { version = "1.0", features = ["system"] }
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suppaftp = "6.2.1"
tempfile = "3.21.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.5.0"
zstd = "0.13.2"

[profile.opt]
codegen-units = 1
debug = "full"
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
