[package]
name = "rua"
version = "2.0.0-alpha"
edition = "2024"
authors = ["bzhao"]
description = "A toolbox for developers of StoneOS and its derivatives"
keywords = ["StoneOS"]
categories = ["command-line-utilities", "terminal", "cli"]
rust-version = "1.93.0"
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.25.0"
anstyle = "1.0.8"
anyhow = "1.0"
bitflags = "2.6.0"
chrono = "0.4.39"
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = "4.5.40"
config = { version = "0.15.0", default-features = false, features = ["json", "toml", "preserve_order", "indexmap"] }
console = "0.16.0"
csv = "1.3.0"
gix = "0.80.0"
home = "0.5.9"
indexmap = { version = "2.7.0", features = ["serde"] }
indicatif = "0.18.0"
libc = "0.2.0"
quick-xml = "0.38.4"
regex = "1.10.0"
reqwest = { version = "0.13.0", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rustix = { version = "1.0", features = ["system"] }
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suppaftp = "7"
tempfile = "3.21.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.0"
walkdir = "2.5.0"
zstd = "0.13.2"

[profile.opt]
codegen-units = 1
debug = "full"
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
